--- a/.github/workflows/Netifly.yml
+++ b/.github/workflows/Netifly.yml
@@ -11,10 +11,10 @@ jobs:
             - name: Deploy to Netlify
               uses: nwtgck/actions-netlify@v1.2
               with:
-                  publish-dir: "./"
+                  publish-dir: './'
                   production-branch: master
                   github-token: ${{ secrets.GITHUB_TOKEN }}
-                  deploy-message: "Deploy from GitHub Actions"
+                  deploy-message: 'Deploy from GitHub Actions'
                   enable-pull-request-comment: false
                   enable-commit-comment: true
                   overwrites-pull-request-comment: true
