--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [14, 15, 16]
+                node-version: [16]
 
         steps:
             - uses: actions/checkout@v2
