--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -18,4 +18,5 @@ jobs:
             - name: Linter
               run: |
                   npm install prettier -g
-                  prettier --single-quote true --trailing-comma all --tab-width 4 --print-width 80 --semi true  --check .
+                  prettier --config ../../../prettierrc.js  --check "./**/*.ts"
+                  prettier --config ../../../prettierrc.js  --check "./**/*.tsx"
