--- a/.github/workflows/Linter.yml
+++ b/.github/workflows/Linter.yml
@@ -18,5 +18,5 @@ jobs:
             - name: Linter
               run: |
                   npm install prettier -g
-                  prettier --config ../../prettierrc.js  --check "./**/*.ts"
+                  prettier --config ../../.prettierrc.js  --check "./**/*.ts"
                   prettier --config ../../.prettierrc.js  --check "./**/*.tsx"
